fix overflow bug

--- a/src/Mention.less
+++ b/src/Mention.less
@@ -14,6 +14,7 @@
 		border: 1px solid @input-border;
 		border-radius: @input-radius;
 		color: @input-color;
+		overflow: auto;
 		&:focus {
 			border-color: @input-border-focus;
 			outline: 0 none;
